fixed layout issue in item description

--- a/src/styles/pages/_shop.scss
+++ b/src/styles/pages/_shop.scss
@@ -209,6 +209,7 @@
                 grid-template-columns: 100%;
 
                 .image_container{
+                    margin-top: 50px;
                     width: 100%;
                     height: 100%;
                     justify-items: left;
